# PrismaRev

./: .gitignore  AGENTS.md  Cargo.toml  README.md  run.ps1
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/prismarev/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
assets/: scenes.toml
assets/fbx/: coord.fbx  cornell-box.fbx  cube-coord.fbx
crates/prism-android/: Cargo.toml
crates/prism-android/src/: lib.rs
crates/prism-asset/: Cargo.toml
crates/prism-asset/src/: gltf_loader.rs  handle.rs  lib.rs  probe_loader.rs  scene_store.rs  types.rs
crates/prism-asset/tests/: minimal_gltf.rs
crates/prism-ecs/: Cargo.toml
crates/prism-ecs/src/: lib.rs
crates/prism-engine/: Cargo.toml
crates/prism-engine/src/: app.rs  calibration_spheres.rs  camera.rs  camera_controller.rs  crash_dialog.rs  crash_dialog_android.rs  crash_dialog_fallback.rs  crash_dialog_linux.rs  crash_dialog_macos.rs  crash_dialog_windows.rs  dirty_router.rs  input.rs  inspector.rs  lib.rs  render_graph_viz.rs  render_system.rs  scene_state.rs
crates/prism-render/: Cargo.toml
crates/prism-render/src/: acceleration_structure.rs  bake_common.rs  batch.rs  bindless.rs  buffer.rs  capabilities.rs  compute.rs  context.rs  descriptor.rs  egui_overlay.rs  gi.rs  gizmo.rs  graph_renderer.rs  gtao.rs  hdr.rs  ibl.rs  lib.rs  mesh.rs  overlay.rs  passes.rs  pbr_push.rs  pipeline.rs  post.rs  pt_pass.rs  render_graph.rs  render_pass.rs  renderer.rs  scene_scope.rs  shader.rs  shader_bindings.rs  swapchain.rs
crates/prism-render/src/deprecated/: mod.rs  renderer_legacy.rs
crates/prism-render/src/managers/: material_manager.rs  mesh_manager.rs  mod.rs  texture_manager.rs
docs/: DESIGN.md  lessons-learned.md  mobile-raytracing-gi-design.md  slang-bindless-migration.md
docs/plans/: 2026-07-11-3d-evolution-design.md  2026-07-11-3d-evolution-plan.md  2026-07-11-android-integration.md  2026-07-12-architecture-audit-plan.md  2026-07-12-pbr-ibl-middle-cube-design.md  2026-07-12-pbr-ibl-middle-cube-plan.md  2026-07-13-debug-view-design.md  2026-07-13-debug-view-plan.md
launcher/: .gitignore  SETUP.md  build_debug.sh  build_release.sh  package.json  pnpm-lock.yaml
launcher/src/: App.vue
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/src/: lib.rs
scripts/: build-android.ps1
shaders/: _gi_test.spv  bindless.frag.spv  compile.bat  compile.sh  fix_spirv.py  gi_bake.comp.spv  gi_render.comp.spv  gizmo.frag.spv  gizmo.vert  gizmo.vert.spv  gtao.frag.spv  gtao.vert.spv  lighting.frag.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_vert.vert.spv  overlay.frag  overlay.frag.spv  overlay.vert  overlay.vert.spv  pbr.frag  pbr.frag.spv  post.frag.spv  post.vert.spv  pt_render.comp.spv  scene.frag.spv  scene.vert.spv  scene_bindless.frag.spv  scene_frag.frag.spv  shadow.comp.spv  shadow_depth.frag.spv  shadow_depth.vert.spv  sharc_query.comp.spv  skybox.frag.spv  skybox.vert.spv  triangle.vert  triangle.vert.spv
shaders/reflection/: bindless.json  gizmo.json  gtao.json  lighting.json  mesh.json  mesh_vert.json  overlay.json  pbr.json  post.json  scene_frag.json  shadow.json  shadow_depth.json  sharc_query.json  skybox.json
shaders/slang/: bindless.slang  common.slang  gi.slang  gi_bake.slang  gi_render.slang  gizmo.slang  gtao.slang  lighting.slang  mesh_vert.slang  overlay.slang  path_integrator.slang  pbr.slang  post.slang  pt_render.slang  scene.frag.slang  scene.vert.slang  scene_bindless.slang  scene_frag.slang  shadow.frag.slang  shadow.slang  shadow.vert.slang  shadow_depth.slang  sharc_query.slang  skybox.slang
shaders/slang/sharc/: buffers.slang  common.slang  integration.slang
src/: main.rs
web-tutorial/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web-tutorial/src/: anim.ts  chapters.ts  highlight.ts  main.ts  styles.css  vite-env.d.ts
web-tutorial/src/content/: 01-intro.md  02-hello.md  03-deps.md  04-winit.md  05-context.md  06-swapchain.md  07-pipeline.md  08-ecs.md  09-ecs-render.md  10-assets.md  11-pbr.md  12-android.md  13-review.md
web-tutorial/src/viz/: concept.ts  coordSpace.ts  deployFlow.ts  ecsFlow.ts  frameLoop.ts  index.ts
xtask/: Cargo.toml
xtask/src/: shader_bindgen.rs
