[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false
description = "PrismaRev build tooling — Slang reflection -> Rust binding codegen"

[[bin]]
name = "shader-bindgen"
path = "src/shader_bindgen.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
