[package]
name = "prism-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vulkan rendering backend for PrismaRev"

[features]

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
raw-window-handle = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
slotmap = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
egui-ash-renderer = { workspace = true }
