[package]
name = "prism-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vulkan rendering backend for PrismaRev"

[[bin]]
name = "prism-bake-gi"
path = "src/bin/prism_bake_gi.rs"

[[bin]]
name = "prism-bake-image"
path = "src/bin/prism_bake_image.rs"

[features]

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
raw-window-handle = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
slotmap = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
egui-ash-renderer = { workspace = true }
prism-asset = { path = "../prism-asset" }
env_logger = { workspace = true }
image = { workspace = true, features = ["hdr"] }
