[package]
name = "tauri-android-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_android_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Keep this Tauri app as its own standalone Cargo workspace, independent of the
# root PrismaRev workspace (which does not list it as a member).
[workspace]

[profile.release]
opt-level = "s"      # 优先体积
lto = true           # 链接期优化
codegen-units = 1    # 更好优化
panic = "abort"      # 去掉 unwind 表
strip = true         # 去符号

